...
    "N" : {

    },
    "Name" : {

    },
    "Name Your Hike" : {

    },
    "Name Your Trail" : {

    },
    "NE" : {
...
    "Record Along a Trail" : {

    },
    "Record Along Trail" : {

    },
    "Record Hike" : {

    },
    "Recording" : {

    },
    "Recording resumed after OpenHikes restarted." : {
...
    "Routes use Apple Maps directions. Turn this off to draw straight lines." : {

    },
    "S" : {

    },
    "Save" : {

    },
    "Save Hikes to Health" : {

    },
    "Save maps for offline use" : {
...
    "Sent. It appears for other hikers once a person has checked it. Opens a request to withdraw it." : {

    },
    "Sent. They appear on the trail once a person has checked them. Opens a request to withdraw them." : {

    },
    "Settings" : {

    },
    "Share" : {

    },
    "Share hike" : {
...
    "Steepness colors" : {

    },
    "Still published" : {

    },
    "Stop" : {

    },
    "Stop %lld" : {

    },
    "Stop Hike" : {
...
